# revpi

./: .gitignore  LICENSE  README.md  go.mod
cmd/gopitest/: build_pi.sh  gopitest.go  variable.go
kunbus/: .gitignore  CMakeLists.txt  README.md  buildme  revpi.pc
kunbus/interface/piControl/: CMakeLists.txt  piControlIf.cpp  piControlIf.hpp
kunbus/makefiles/cmake/: arm-linux.cmake  global_settings.cmake
kunbus/piTest/: CMakeLists.txt
kunbus/pkgconfig/: revpi.pc.in
pkg/gopicontrol/: cgopicontrol.go  ctypes_linux.go  generate_godefs.sh  gopicontrol.go  types_linux.go
